--- a/assets/css/mobster.css
+++ b/assets/css/mobster.css
@@ -1276,8 +1276,8 @@ hr {
   margin-right: 8px;
   width: 20px;
   height: 20px;
-  background-color: rgba(96, 47, 218, 0.16);
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='11.568' height='7.818' viewBox='0 0 11.568 7.818'%3E%3Cpath id='Path_56' data-name='Path 56' d='M573,3671.99l4.2,2.76,5.55-6.25' transform='translate(-572.1 -3667.582)' fill='none' stroke='%23602fda' stroke-linecap='round' stroke-linejoin='round' stroke-width='1.3'/%3E%3C/svg%3E");
+  background-color: #89F6AA;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='11.568' height='7.818' viewBox='0 0 11.568 7.818'%3E%3Cpath id='Path_56' data-name='Path 56' d='M573,3671.99l4.2,2.76,5.55-6.25' transform='translate(-572.1 -3667.582)' fill='none' stroke='%23007C67' stroke-linecap='round' stroke-linejoin='round' stroke-width='1.3'/%3E%3C/svg%3E");
   background-repeat: no-repeat;
   background-position: center center;
   border-radius: 50%;
@@ -2379,7 +2379,6 @@ hr {
   margin: 15px;
   padding: 60px 20px 80px 20px;
   background-color: #fff;
-  background-image: url(../img/pricing_pattern_grayscale.svg);
   background-repeat: no-repeat;
   background-size: cover;
   width: 300px;
@@ -2397,7 +2396,6 @@ hr {
 }
 
 .pricing-item.active {
-  background-image: url(../img/pricing_pattern.svg);
 }
 
 .active .pricing-header h1 {
